--- a/projects.css
+++ b/projects.css
@@ -1,6 +1,5 @@
 *{
     box-sizing: border-box;
-
 }
 
 :root {
@@ -45,11 +44,17 @@ h3 {
 }
 
 h4 {
-    margin-top: 10px; margin-bottom: 10px; font-size: 24px; font-weight: 400; line-height: 38px;
+    margin-top: 10px; 
+    margin-bottom: 10px; 
+    font-size: 24px; 
+    font-weight: 400; 
+    line-height: 38px;
 }
 
 h5 {
-    margin-top: 10px; margin-bottom: 10px; font-size: 20px;
+    margin-top: 10px; 
+    margin-bottom: 10px; 
+    font-size: 20px;
     font-weight: 500;
     line-height: 34px;
 }
@@ -104,4 +109,123 @@ label {
     font-size: 12px;
     font-weight: 500;
     line-height: 20px;
+}
+
+.section{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.container {
+    width: 100%;
+    max-width: 1140px;
+    margin: 180px auto 180px auto;
+}
+.style-heading{
+    color: var(--white);
+    padding: 180px 0px 180px 180px;
+    background-image: url('working-image.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.name-text{
+    text-transform: none;
+    font-size: 54px;
+    line-height: 80px;
+}
+.light-text{
+    opacity: .6;
+    margin: 0px;
+}
+.project-wrap{
+    margin-bottom: 120px;
+}
+.project-desc-wrap{
+    display: flex;
+    height: auto;
+    flex-direction: row;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.project-overview-container{
+    width: 50%;
+}
+.project-contibution-container{
+    width: 50%;
+}
+.action-button{
+    display: flex;
+    justify-content: space-between;
+}
+.action-button .type-1-button{
+    color: #fff;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    background-color: #1a1b1f;
+    border: none;
+    padding: 12px 25px;
+    font-size: 12px;
+    line-height: 20px;
+    text-decoration: none;
+    transition: background-color .4s, opacity .4s, color .4s;
+}
+.type-1-button:hover{
+    background-color: #43464d;
+}
+
+.type-2-button{
+    background-color: none;
+    border: none;
+    padding: 0px;
+    border-radius: 100%;
+    opacity: .9;
+    transition: background-color .4s, opacity .4s;
+}
+.type-2-button img{
+    width: 45px;
+    height: auto;
+    margin: 0 auto;
+}
+.type-2-button:hover{
+    background-color: #a2a4a961;
+    cursor: grab;
+    opacity: .6;
+}
+.project-content-container{
+    height: 300px;
+    overflow: hidden;
+    transition: height 0.5s ease-in-out;
+}
+.project-content-container.expanded {
+    height: auto;
+}
+
+.project-media-container{
+    display: grid;
+    height: fit-content;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    margin-bottom: 60px;
+}
+.project-media-container .project-image{
+    background-color: #a2a4a9;
+    height: auto;
+    width: 360px;
+}
+.project-media-container .project-video{
+    height: auto;
+    width: 100%;
+}
+#project1-image1{
+    grid-column: 1;
+}
+#project1-image2{
+    grid-column: 2;
+}
+#project1-image3{
+    grid-column: 3;
+}
+#project1-video1{
+    grid-column: 1 / -1;
 }
