--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ label {
     margin: auto 30px;
 }
 .intro-section .intro-wrap{
-    margin: 100px auto;
+    margin: 140px auto;
     width: 70%;
 }
 .name-text {
@@ -130,6 +130,23 @@ label {
     position: static;
     width: 100%;
     color: rgb(233, 233, 233);
+    position: relative;
+  }
+  .name-text::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    animation: slide-out 1s forwards;
+  }
+  
+  @keyframes slide-out {
+    to {
+      transform: translateX(-100%);
+    }
   }
 .container{
     width: 100%;
@@ -144,6 +161,47 @@ label {
     margin-bottom: 10px;
     font-size: 54px;
     line-height: 80px;
+}
+
+.square-container-wrap{
+    position: absolute;
+    z-index: 2;
+    bottom: 30%;
+    right: 17%;
+}
+
+.color-block{
+    width: 40px;
+    height: 40px;
+    margin: 10px;
+    position: relative;
+}
+.square-1-red{
+    background-color: rgb(226, 73, 73);}
+
+#square-1-red{
+    width: 600px;
+    animation: squares-slide 1.2s forwards;
+}
+.square-2-blue{
+    background-color: rgb(55, 106, 226);
+}
+#square-2-blue{
+    width: 600px;
+    animation: squares-slide .9s forwards;
+}
+.square-3-green{
+    background-color: rgb(85, 172, 85);
+}
+#square-3-green{
+    width: 600px;
+    animation: squares-slide .6s forwards;
+}
+@keyframes squares-slide {
+    to{
+        width: 40px;
+        transform: translateX(100%);
+    }
 }
 
 .project-section{
@@ -272,3 +330,4 @@ label {
     font-size: 12px;
     line-height: 20px;
 }
+
