--- a/styles.css
+++ b/styles.css
@@ -1,98 +1,18 @@
-*{
-    box-sizing: border-box;
-
+.background-image{
+    position: absolute;
+    z-index: -1;
+    top: 6%;
+    left: -9%;
+    height: fit-content;
+    width: fit-content;
+}
+.background-image img{
+    width: 810px;
+    opacity: .6;
+    height: auto;
 }
 
-:root {
-    --white: white;
-    --black: black;
-}
-div{
-    display: block;
-}
-.w-layout-grid {
-    grid-row-gap: 16px;
-    grid-column-gap: 16px;
-    grid-template-rows: auto auto; grid-template-columns: 1fr 1fr;
-    grid-auto-columns: 1fr;
-    display: grid;
-}
-
-body {
-    color: #1a1b1f;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 28px;
-}
-
-h1 {
-    margin-top: 20px; margin-bottom: 15px; font-size: 44px;
-    font-weight: 400;
-    line-height: 62px;
-}
-h2 {
-    margin-top: 10px; margin-bottom: 10px; font-size: 36px;
-    font-weight: 400; line-height: 50px;
-}
-
-h3 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 46px;
-}
-
-h4 {
-    margin-top: 10px; margin-bottom: 10px; font-size: 24px; font-weight: 400; line-height: 38px;
-}
-
-h5 {
-    margin-top: 10px; margin-bottom: 10px; font-size: 20px;
-    font-weight: 500;
-    line-height: 34px;
-}
-
-h6 {
-    margin-top: 10px; 
-    margin-bottom: 10px; 
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 28px;
-}
-
-P {
-    margin-bottom: 10px;
-}
-
-a {
-    color: #999dab;
-    text-decoration: underline; 
-    transition: opacity .36s;
-    display: block;
-}
-
-a:hover {
-    color: #32343a;
-    opacity: 0.81;
-}
-
-a:active { 
-    color: #43464d;
-}
-
-ul {
-    margin-top: 20px; 
-    margin-bottom: 20px; 
-    padding-left: 40px; 
-    list-style-type: disc;
-}
-
-li {
-margin-bottom: 10px;
-}
-
+/* Base styles */
 img {
     display: block;
 }
@@ -106,12 +26,10 @@ label {
     line-height: 20px;
 }
 
-
-
-.intro-section{
+.intro-section {
     margin: auto 30px;
 }
-.intro-section .intro-wrap{
+.intro-section .intro-wrap {
     margin: 140px auto;
     width: 70%;
 }
@@ -131,8 +49,8 @@ label {
     width: 100%;
     color: rgb(233, 233, 233);
     position: relative;
-  }
-  .name-text::before {
+}
+.name-text::before {
     content: "";
     position: absolute;
     top: 0;
@@ -141,20 +59,21 @@ label {
     height: 100%;
     background-color: #ffffff;
     animation: slide-out 1s forwards;
-  }
-  
-  @keyframes slide-out {
+}
+
+@keyframes slide-out {
     to {
-      transform: translateX(-100%);
+        width: 0%;
+        transform: translateX(-1%);
     }
-  }
-.container{
+}
+.container {
     width: 100%;
     max-height: 1140px;
     margin-left: auto;
     margin-right: auto;
 }
-.heading-jumbo{
+.heading-jumbo {
     font-family: 'Montserrat', sans-serif;
     text-transform: none;
     margin-top: 10px;
@@ -163,57 +82,58 @@ label {
     line-height: 80px;
 }
 
-.square-container-wrap{
+.square-container-wrap {
     position: absolute;
     z-index: 2;
     bottom: 30%;
     right: 17%;
 }
 
-.color-block{
+.color-block {
     width: 40px;
     height: 40px;
     margin: 10px;
     position: relative;
 }
-.square-1-red{
-    background-color: rgb(226, 73, 73);}
+.square-1-red {
+    background-color: rgb(226, 73, 73);
+}
 
-#square-1-red{
+#square-1-red {
     width: 600px;
     animation: squares-slide 1.2s forwards;
 }
-.square-2-blue{
+.square-2-blue {
     background-color: rgb(55, 106, 226);
 }
-#square-2-blue{
+#square-2-blue {
     width: 600px;
-    animation: squares-slide .9s forwards;
+    animation: squares-slide 0.9s forwards;
 }
-.square-3-green{
+.square-3-green {
     background-color: rgb(85, 172, 85);
 }
-#square-3-green{
+#square-3-green {
     width: 600px;
-    animation: squares-slide .6s forwards;
+    animation: squares-slide 0.6s forwards;
 }
 @keyframes squares-slide {
-    to{
+    to {
         width: 40px;
         transform: translateX(100%);
     }
 }
 
-.project-section{
+.project-section {
     display: grid;
     gap: 30px;
     margin: auto 30px;
 }
-.project-section .works{
+.project-section .works {
     text-align: center;
 }
 
-.works .work-image{
+.works .work-image {
     text-align: center;
     background-color: #f4f4f4;
     background-position: 50%;
@@ -227,22 +147,22 @@ label {
     display: flex;
     max-width: 100%;
 }
-.work-1{
+.work-1 {
     background-image: url('adminshub project.png');
     background-position: 50%;
     background-size: cover;
 }
-.work-2{
+.work-2 {
     background-image: url('snapmusic project.png');
     background-position: 50%;
     background-size: cover;
 }
-.work-3{
+.work-3 {
     background-image: url('trvlxp project.png');
     background-position: 50%;
     background-size: cover;
 }
-.work-4{
+.work-4 {
     background-image: url('cyber gaming project.png');
     background-position: 50%;
     background-size: cover;
@@ -255,7 +175,7 @@ label {
     margin-bottom: 60px;
     display: flex;
 }
-.works .project-name-link{
+.works .project-name-link {
     margin-bottom: 5px;
     color: #32343a;
     font-size: 20px;
@@ -263,71 +183,173 @@ label {
     line-height: 34px;
     text-decoration: none;
 }
-.paragraph-light{
- opacity: .6;
+.paragraph-light {
+    opacity: 0.6;
 }
-#work-1{
+#work-1 {
     grid-column: 1 / span 2;
     grid-row: 1;
 }
-#work-2{
+#work-2 {
     grid-column: 3;
 }
-#work-3{
+#work-3 {
     grid-column: 1;
 }
-#work-4{
+#work-4 {
     grid-column: 2 / span 2;
     grid-row: 2;
 }
 
-.experience-container{
+.experience-container {
     width: 80%;
     max-width: 1140px;
     margin: 140px auto 180px auto;
 }
-.experience-container .carrer-headline-wrap{
+.experience-container .carrer-headline-wrap {
     width: 70%;
     margin-bottom: 50px;
 }
 
-.carrer-headline-wrap h2{
+.carrer-headline-wrap h2 {
     margin-top: 10px;
     margin-bottom: 10px;
     font-size: 36px;
     font-weight: 400;
     line-height: 50px;
 }
-.carrer-headline-wrap p{
+.carrer-headline-wrap p {
     margin-bottom: 10px;
 }
-.work-experience-flex{
+.work-experience-flex {
     margin-bottom: 140px;
     display: flex;
     justify-content: space-between;
 }
-.work-experience-flex .work-position-wrap{
+.work-experience-flex .work-position-wrap {
     width: fit-content;
 }
 
-.position-name-text{
+.position-name-text {
     text-transform: none;
     margin-bottom: 10px;
     font-size: 20px;
     font-weight: 400;
     line-height: 34px;
 }
-.paragraph-light{
-    opacity: .6;
+.paragraph-light {
+    opacity: 0.6;
 }
-.cc-position-name{
+.cc-position-name {
     margin-bottom: 5px;
 }
 .paragraph-tiny.cc-paragraph-tiny-light {
-    opacity: .7;
+    opacity: 0.7;
 }
 .paragraph-tiny {
     font-size: 12px;
     line-height: 20px;
 }
 
+/* Responsive styles */
+
+@media (max-width: 1200px) {
+    .intro-section .intro-wrap {
+        width: 80%;
+    }
+    .name-text {
+        font-size: 80px;
+        line-height: 120px;
+    }
+    .heading-jumbo {
+        font-size: 40px;
+        line-height: 60px;
+    }
+    .work-experience-flex {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 992px) {
+    .intro-section .intro-wrap {
+        width: 90%;
+    }
+    .name-text {
+        font-size: 60px;
+        line-height: 90px;
+    }
+    .square-container-wrap {
+        bottom: 20%;
+        right: 10%;
+    }
+    .work-experience-flex {
+        margin-bottom: 100px;
+    }
+    .project-section {
+        gap: 20px;
+        margin: auto 20px;
+    }
+    .project-section .works .work-image {
+        height: 300px;
+    }
+}
+
+@media (max-width: 768px) {
+    .intro-section .intro-wrap {
+        width: 100%;
+    }
+    .name-text {
+        font-size: 40px;
+        line-height: 60px;
+    }
+    .heading-jumbo {
+        font-size: 30px;
+        line-height: 40px;
+    }
+    .square-container-wrap {
+        bottom: 10%;
+        right: 5%;
+    }
+    .project-section {
+        gap: 15px;
+        margin: auto 15px;
+    }
+    .project-section .works .work-image {
+        height: 200px;
+    }
+    .experience-container {
+        width: 90%;
+    }
+    .work-experience-flex {
+        margin-bottom: 80px;
+    }
+}
+
+@media (max-width: 576px) {
+    .name-text {
+        font-size: 30px;
+        line-height: 45px;
+    }
+    .heading-jumbo {
+        font-size: 24px;
+        line-height: 36px;
+    }
+    .square-container-wrap {
+        bottom: 5%;
+        right: 2%;
+    }
+    .project-section {
+        gap: 10px;
+        margin: auto 10px;
+    }
+    .project-section .works .work-image {
+        height: 150px;
+    }
+    .experience-container {
+        width: 100%;
+    }
+    .work-experience-flex {
+        margin-bottom: 60px;
+    }
+}
